--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,9 +55,9 @@ set(LONG_DESCRIPTION "Climatology provides overlay capabilities for historic wea
 
 set(VERSION_MAJOR "1")
 set(VERSION_MINOR "6")
-set(VERSION_PATCH "2")
+set(VERSION_PATCH "3")
 set(VERSION_TWEAK "0")
-set(VERSION_DATE  "22/09/2023")#DD/MM/YYYY format
+set(VERSION_DATE  "23/09/2023")#DD/MM/YYYY format
 set(OCPN_MIN_VERSION "ov58")
 
 set(OCPN_API_VERSION_MAJOR "1")
@@ -188,7 +188,7 @@ SET(SRC ${SRCS} ${HDRS} )
 ## Modify/configure 'Include' Directories below for the Plugin
 ##=============================================================
 
-include_directories(BEFORE ${PROJECT_SOURCE_DIR}/include)
+#include_directories(BEFORE ${PROJECT_SOURCE_DIR}/include)
 
 ## Change target_sources to match your project needs.
 ##==============================================================
@@ -217,6 +217,15 @@ if(NOT OCPN_FLATPAK_CONFIG)
 #    add_subdirectory(opencpn-libs/plugingl)
 #    target_link_libraries(${PACKAGE_NAME} ocpn::plugingl)
 
+#include_directories(BEFORE ${PROJECT_SOURCE_DIR}/opencpn-libs/jsoncpp)
+add_subdirectory(opencpn-libs/jsoncpp)
+target_link_libraries(${PACKAGE_NAME} ocpn::jsoncpp)
+
+#include_directories(BEFORE ${PROJECT_SOURCE_DIR}/opencpn-libs/plugingl/include)
+add_subdirectory(opencpn-libs/plugingl)
+target_link_libraries(${PACKAGE_NAME} ocpn::plugingl)
+
+
 endif(NOT OCPN_FLATPAK_CONFIG)
 
 add_definitions(-DTIXML_USE_STL)
@@ -237,17 +246,17 @@ endif(QT_ANDROID)
 
 IF(NOT UNIX)
 
-#    include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/zlib-1.2.3)
-#    include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/bzip2)
-
-#    include_directories(BEFORE ${PROJECT_SOURCE_DIR}/opencpn-libs/zlib)
-#    add_subdirectory(opencpn-libs/zlib)
-#    target_link_libraries(${PACKAGE_NAME} ocpn::zlib)
-	
     include_directories(BEFORE ${PROJECT_SOURCE_DIR}/opencpn-libs/bzip2)
     add_subdirectory(opencpn-libs/bzip2)
     target_link_libraries(${PACKAGE_NAME} ocpn::bzip2)
 
+# zlib already included
+#    include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/zlib-1.2.3)
+#    include_directories(BEFORE ${PROJECT_SOURCE_DIR}/opencpn-libs/zlib)
+#    add_subdirectory(opencpn-libs/zlib)
+#    target_link_libraries(${PACKAGE_NAME} ocpn::zlib)
+
+#    include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/bzip2)
 #    add_subdirectory(${PROJECT_SOURCE_DIR}/libs/bzip2)
 #    target_link_libraries(${PACKAGE_NAME} ocpn::bzip2)
 
@@ -271,14 +280,6 @@ IF(WIN32)
     TARGET_LINK_LIBRARIES(${PACKAGE_NAME} "-lz")
   ENDIF()
 ENDIF(WIN32)
-
-include_directories(BEFORE ${PROJECT_SOURCE_DIR}/opencpn-libs/jsoncpp)
-add_subdirectory(opencpn-libs/jsoncpp)
-target_link_libraries(${PACKAGE_NAME} ocpn::jsoncpp)
-
-include_directories(BEFORE ${PROJECT_SOURCE_DIR}/opencpn-libs/plugingl/include)
-add_subdirectory(opencpn-libs/plugingl)
-target_link_libraries(${PACKAGE_NAME} ocpn::plugingl)
 
 
 #include_directories(BEFORE ${PROJECT_SOURCE_DIR}/libs/jsoncpp)
