--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -220,8 +220,10 @@ if(NOT OCPN_FLATPAK_CONFIG)
     add_subdirectory(opencpn-libs/plugingl)
     target_link_libraries(${PACKAGE_NAME} ocpn::plugingl)
 
-    add_subdirectory(opencpn-libs/glu)
-    target_link_libraries(${PACKAGE_NAME} ocpn::glu_static)
+    if(QT_ANDROID)
+        add_subdirectory(opencpn-libs/glu)
+        target_link_libraries(${PACKAGE_NAME} ocpn::glu_static)
+    endif()
 
     IF(NOT UNIX)
 
