--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "data"]
 	path = data
 	url = https://github.com/seandepagnier/climatology_pi_data
+[submodule "opencpn-libs"]
+	path = opencpn-libs
+	url = https://github.com/OpenCPN/opencpn-libs.git
+	branch = main
