--- a/.circleci/config - Copy.yml
+++ b/.circleci/config - Copy.yml
@@ -26,65 +26,14 @@ std-filters: &std-filters
 workflows:
     build_all:
         jobs:
-## ----------------------
+###  --------------------
 ## OpenCPN 5.8 Plugins
 ## ----------------------
         - build-android-arm64:
              <<: *std-filters
         - build-android-armhf:
              <<: *std-filters
-        - build-macos-wx32:
-             <<: *std-filters
-        - build-flatpak-arm64-2208:
-            <<: *std-filters
-        - build-flatpak-x86-2208:
-            <<: *std-filters
-## flatpak-armhf has Insufficient performance.
-## Appveyor can also build for Windows.
-        - build-msvc-wx32-2022:
-            <<: *std-filters
-        - build-debian-arm64-12-bookworm:
-            <<: *std-filters
-        - build-debian-armhf-12-bookworm:
-            <<: *std-filters
-        - build-debian-x86_64-12-bookworm:
-            <<: *std-filters
-        - build-debian-armhf-11-bullseye:
-            <<: *std-filters
-        - build-debian-arm64-11-bullseye:
-            <<: *std-filters
-        - build-debian-x86_64-11-bullseye:
-            <<: *std-filters
-## KEEP needed for Jammy with wx32
-        - build-ubuntu-x86_64-2204-jammy:
-            <<: *std-filters
-        - build-macos-universal:
-              <<: *std-filters
 
-## -------------------------------------------
-## OpenCPN 5.6.2 Plugins  Frozen - 28/05/2023
-## ------------------------------------------
-## Circleci will not build for macos 11 so removed - 18/10/2023
-        - build-macos:
-             <<: *std-filters
-## Appveyor no longer builds for Windows.
-        - build-msvc-2022:
-            <<: *std-filters
-        - build-debian-armhf-10-buster:
-            <<: *std-filters
-        - build-debian-armhf-10-buster-gtk3:
-            <<: *std-filters
-        - build-debian-arm64-10-buster:
-            <<: *std-filters
-        - build-debian-x86_64-10-buster:
-            <<: *std-filters
-
-## -------------------------------------
-## UBUNTU OS  Frozen - 28/05/2023  DROP
-## -------------------------------------
-## KEEP needed for Raspbian OpenCPN v5.6
-        - build-ubuntu-armhf-1804-buster:
-            <<: *std-filters
 ##        - build-ubuntu-x86_64-1804-bionic:
 ##            <<: *std-filters
 ##        - build-ubuntu-x86_64-1804-bionic-gtk3:
@@ -114,7 +63,7 @@ commands:
                     condition: <<parameters.install-python>>
                     steps:
                     - run: sudo apt install -y python3-pip
-                    - run: python3 -m pip install cloudsmith-cli
+                    - run: python3.8 -m pip install cloudsmith-cli
                 - when:
                     condition: <<parameters.DEPLOY-USE-ORB>>
                     steps:
@@ -129,12 +78,12 @@ commands:
     # provide the wxWidgets QT information.
 
 jobs:
-## ---------------------
+##  --------------------
 ## OpenCPN 5.8 Plugins
 ## ---------------------
     build-android-arm64:
         docker:
-        - image: cimg/android:2023.12-ndk
+        - image: cimg/android:2021.10.2-ndk
         resource_class: large
         environment:
         - OCPN_TARGET:  android-arm64
@@ -147,11 +96,10 @@ jobs:
             install-python: true
     build-android-armhf:
         docker:
-        - image: cimg/android:2023.12-ndk
+        - image: cimg/android:2021.10.2-ndk
         resource_class: large
         environment:
         - OCPN_TARGET:  android-armhf
-        - DEPLOY_USE_ORB: true
         steps:
         - checkout
         - run: chmod a+x ci/*.sh
@@ -160,7 +108,8 @@ jobs:
             install-python: true
     build-macos-wx32:
         macos:
-            xcode: "13.4"
+            xcode: "12.5.1"
+        resource_class: macos.x86.medium.gen2
         environment:
         - OCPN_TARGET:  macos
         - CLOUDSMITH_PKG_EXT: pkg
@@ -171,35 +120,6 @@ jobs:
         - run: chmod a+x ci/*.sh
         - run: bash ci/circleci-build-macos.sh
         - deploy-code
-
-    build-macos-universal:
-        macos:
-            xcode: "12.5.1"
-        environment:
-            - OCPN_TARGET: macos
-            - CMAKE_BUILD_PARALLEL_LEVEL: 2
-            - WX_VER: 32
-        steps:
-            - checkout
-            - run: sudo chmod go+w /usr/local
-            - restore_cache:
-                  key: "{{checksum \"build-deps/macos-cache-stamp\"}}\
-              -{{checksum \"cmake/MacosWxwidgets.cmake\"}}\
-              -{{checksum \"ci/circleci-build-macos-universal.sh\"}}"
-            - run: ci/circleci-build-macos-universal.sh
-            - save_cache:
-                  key: "{{checksum \"build-deps/macos-cache-stamp\"}}\
-              -{{checksum \"cmake/MacosWxwidgets.cmake\"}}\
-              -{{checksum \"ci/circleci-build-macos-universal.sh\"}}"
-                  paths:
-                      - /tmp/local.cache.tar
-                      - /Users/distiller/project/cache
-            - run: >
-                  sh -c "otool -L build/*.dylib"
-            - run: >
-                  sh -c "cat build/*.xml"
-            - deploy-code
-
     build-msvc-wx32-2022:
         executor:
             name: win/server-2022
@@ -383,7 +303,8 @@ jobs:
 ## ---------------------
     build-macos:
         macos:
-            xcode: "13.4"
+            xcode: "12.5.1"
+        resource_class: macos.x86.medium.gen2
         environment:
         - OCPN_TARGET:  macos
         - CLOUDSMITH_PKG_EXT: pkg
